--- a/task/tkn-bundle/0.2/tkn-bundle.yaml
+++ b/task/tkn-bundle/0.2/tkn-bundle.yaml
@@ -132,106 +132,236 @@ spec:
     - name: REVISION
       value: $(params.REVISION)
     script: |
-        #!/bin/env bash
+      #!/bin/env bash
 
-        set -o errexit
-        set -o pipefail
-        set -o nounset
+      set -o errexit
+      set -o pipefail
+      set -o nounset
 
-        mapfile -t FILES <"${TASK_FILE}"
-        [[ ${#FILES[@]} -eq 0 ]] &&
-          echo "No YAML files matched by \"$CONTEXT\" in \"/var/workdir/${SOURCE_CODE_DIR}\", aborting the build" &&
-          exit 1
-        exec 3>&1
+      declare -r ANNOTATION_HAS_MIGRATION="dev.konflux-ci.task.has-migration"
+      declare -r ANNOTATION_IS_MIGRATION="dev.konflux-ci.task.is-migration"
+      declare -r ARTIFACT_TYPE_TEXT_XSHELLSCRIPT="text/x-shellscript"
 
-        function escape_tkn_bundle_arg() {
-          # the arguments to `tkn bundle --annotate` need to be escaped in a curious way
-          # see https://github.com/tektoncd/cli/issues/2402 for details
+      mapfile -t FILES <"${TASK_FILE}"
+      [[ ${#FILES[@]} -eq 0 ]] &&
+        echo "No YAML files matched by \"$CONTEXT\" in \"$(workspaces.source.path)/${SOURCE_CODE_DIR}\", aborting the build" &&
+        exit 1
+      exec 3>&1
 
-          local arg=$1
-          # replace single double-quotes with double double-quotes (this escapes the double-quotes)
-          local escaped_arg=${arg//\"/\"\"}
-          # wrap the whole thing in double-quotes (this escapes commas)
-          printf '"%s"' "$escaped_arg"
-        }
+      function escape_tkn_bundle_arg() {
+        # the arguments to `tkn bundle --annotate` need to be escaped in a curious way
+        # see https://github.com/tektoncd/cli/issues/2402 for details
 
-        # Check if task is kustomized
-        # A task considered to be kustomized when a kustomization file is found in the task dir
-        is_kustomized_task() {
-            local -r task_dir=$1
-            if [[ -f "$task_dir/kustomization.yaml" || -f "$task_dir/kustomization.yml" ]] ; then
-                return 0
+        local arg=$1
+        # replace single double-quotes with double double-quotes (this escapes the double-quotes)
+        local escaped_arg=${arg//\"/\"\"}
+        # wrap the whole thing in double-quotes (this escapes commas)
+        printf '"%s"' "$escaped_arg"
+      }
+
+      # Check if task is kustomized
+      # A task considered to be kustomized when a kustomization file is found in the task dir
+      is_kustomized_task() {
+        local -r task_dir=$1
+        if [[ -f "$task_dir/kustomization.yaml" || -f "$task_dir/kustomization.yml" ]]; then
+          return 0
+        fi
+        return 1
+      }
+
+      # Generate a task from the kustomization file
+      generate_kustomized_task() {
+        local -r task_dir=$1
+        local -r prepared_task_file="$task_dir/generated-kustomized-task.yaml"
+        kubectl kustomize "$task_dir" >"$prepared_task_file"
+        echo "$prepared_task_file"
+      }
+
+      # check if migration file exists in given task bundle and task_version.
+      # Arguments: task_bundle, task_version, migration_file
+      check_existing_migration_file() {
+        local -r task_bundle=$1
+        local -r task_version=$2
+        local -r migration_file=$3
+
+        # Check if task bundle has an attached migration file.
+        local filename
+        local found=
+        local artifact_refs
+
+        # List attached artifacts, that have specific artifact type and annotation.
+        # Then, find out the migration artifact.
+        #
+        # Minimum version oras 1.2.0 is required for option --format
+        artifact_refs=$(
+          oras discover "$task_bundle" --artifact-type "$ARTIFACT_TYPE_TEXT_XSHELLSCRIPT" --format json | \
+          jq -r "
+            .manifests[]
+            | select(.annotations.\"${ANNOTATION_IS_MIGRATION}\" == \"true\")
+            | .reference"
+        )
+        while read -r artifact_ref; do
+          if [ -z "$artifact_ref" ]; then
+              continue
+          fi
+          filename=$(
+            retry oras pull --format json "$artifact_ref" | jq -r "
+              .files[]
+              | select(.annotations.\"org.opencontainers.image.title\" == \"${task_version}.sh\")
+              | .annotations.\"org.opencontainers.image.title\"
+              "
+          )
+
+          if [ -n "$filename" ]; then
+            if diff "$filename" "$migration_file" >/dev/null; then
+              found=true
+              break
+            else
+              echo "error: task bundle $task_bundle has migration artifact $artifact_ref, but the migration content is different: $filename" 1>&2
+              exit 1
             fi
-            return 1
-        }
+          fi
+        done <<<"$artifact_refs"
 
-        # Generate a task from the kustomization file
-        generate_kustomized_task() {
-            local -r task_dir=$1
-            local -r prepared_task_file="$task_dir/generated-kustomized-task.yaml"
-            kubectl kustomize "$task_dir" >"$prepared_task_file"
-            echo "$prepared_task_file"
-        }
+        # the same migration file exist
+        if [ "$found" == "true" ]; then
+          echo 1
+        fi
+        # migratioan file doesn't exist
+        echo 0
+      }
 
-        # task_dir is where all the tasks definitions reside
-        # all tasks definitions are in the same task_dir, so extracting it from the first element is enough
-        task_dir=$(echo "${FILES[0]}" | awk -F'/' '{NF--; print $0}' OFS='/')
+      attach_migration_file() {
+        local -r task_bundle=$1
+        local -r task_version=$2
+        local -r migration_file=$3
+        local -r auth_json=$4
 
-        # If task is kustomized, generate it and replace the FILES value with the value of the generated task
-        # All other files will be ignored.
-        if is_kustomized_task "$task_dir"; then
-            echo "Generating a kustomized task from $task_dir"
-            FILES=("$(generate_kustomized_task "$task_dir")")
-        else
-            echo "Task is not Kustomized - continue"
+        cd "${migration_file%/*}"
+        retry oras attach \
+          --registry-config "${auth_json}" \
+          --artifact-type "$ARTIFACT_TYPE_TEXT_XSHELLSCRIPT" \
+          --annotation "${ANNOTATION_IS_MIGRATION}=true" \
+          "$task_bundle" "${migration_file##*/}"
+
+        local status=$?
+        if [[ $status -ne 0 ]]; then
+          echo "failed to attach migration script file to $task_bundle"
+          echo 1
         fi
 
-        ANNOTATIONS=()
-        ANNOTATIONS+=("org.opencontainers.image.source=${URL}")
-        ANNOTATIONS+=("org.opencontainers.image.revision=${REVISION}")
-        ANNOTATIONS+=("org.opencontainers.image.url=${URL}/tree/${REVISION}/${CONTEXT}")
+        echo "Attached migration file $migration_file to $task_bundle"
 
-        # Ensure an empty string is output rather than string "null" if the version label is not present
-        task_version=$(yq '.metadata.labels."app.kubernetes.io/version"' "${FILES[@]}" | sed '/null/d' | tr -d '[:space:]')
-        ANNOTATIONS+=("org.opencontainers.image.version=${task_version}")
+        echo 0
+      }
 
-        if [ -f "${task_dir}/README.md" ]; then
-          ANNOTATIONS+=("org.opencontainers.image.documentation=${URL}/tree/${REVISION}/${CONTEXT}/README.md")
-        fi
+      # task_dir is where all the tasks definitions reside
+      # all tasks definitions are in the same task_dir, so extracting it from the first element is enough
+      read -r task_dir task_name task_version <<<"$(
+        dirname "${FILES[0]}" |
+          awk -F'/' '{ print $0, $6, $7 }'
+      )"
+      echo "info: build and push task $task_dir"
 
-        if [ -f "${task_dir}/TROUBLESHOOTING.md" ]; then
-          ANNOTATIONS+=("dev.tekton.docs.troubleshooting=${URL}/tree/${REVISION}/${CONTEXT}/TROUBLESHOOTING.md")
-        fi
+      # If task is kustomized, generate it and replace the FILES value with the value of the generated task
+      # All other files will be ignored.
+      if is_kustomized_task "$task_dir"; then
+        echo "Generating a kustomized task from $task_dir"
+        FILES=("$(generate_kustomized_task "$task_dir")")
+      else
+        echo "Task is not Kustomized - continue"
+      fi
 
-        if [ -f "${task_dir}/USAGE.md" ]; then
-          ANNOTATIONS+=("dev.tekton.docs.usage=${URL}/tree/${REVISION}/${CONTEXT}/USAGE.md")
-        fi
-        description=$(yq '.spec.description' "${FILES[@]}" | sed '/null/d' | tr -d '')
-        ANNOTATIONS+=("org.opencontainers.image.description=${description}")
+      # go to source dir and check migration script
+      has_migration=false
+      pushd "$(workspaces.source.path)/${SOURCE_CODE_DIR}"
+      migration_file="task/${task_name}/${task_version}/migrations/${task_version}.sh"
+      if [ ! -d ".git" ]; then
+        echo ".git folder is not found, go to correct git root directory and check it again"
+        exit 1
+      fi
+      if [ -f "$migration_file" ] && git show "$REVISION" --oneline --name-only | grep -q "$migration_file"; then
+        # There is a migration file matching the task concrete version and
+        # is included in the same commit with the task.
+        echo "there is an migration file ${migration_file} in revision ${REVISION}"
+        has_migration=true
+      fi
+      popd
 
-        echo "Added annotations:"
-        ANNOTATION_FLAGS=()
-        for annotation in "${ANNOTATIONS[@]}"; do
-          ANNOTATION_FLAGS+=("--annotate" "$(escape_tkn_bundle_arg "$annotation")")
-          echo "    - $annotation"
-        done
+      ANNOTATIONS=()
+      ANNOTATIONS+=("org.opencontainers.image.source=${URL}")
+      ANNOTATIONS+=("org.opencontainers.image.revision=${REVISION}")
+      ANNOTATIONS+=("org.opencontainers.image.url=${URL}/tree/${REVISION}/${CONTEXT}")
 
-        echo "Pushing bundle ${IMAGE} to registry"
-        # shellcheck disable=SC2046
-        if ! OUT="$(retry tkn bundle push "${ANNOTATION_FLAGS[@]}" "$IMAGE" \
-          $(printf ' -f %s' "${FILES[@]}") |
-          tee /proc/self/fd/3)"
-        then
-          echo "Failed to push bundle ${IMAGE} to registry"
+      # Ensure an empty string is output rather than string "null" if the version label is not present
+      task_version=$(yq '.metadata.labels."app.kubernetes.io/version"' "${FILES[@]}" | sed '/null/d' | tr -d '[:space:]')
+      ANNOTATIONS+=("org.opencontainers.image.version=${task_version}")
+
+      if [ -f "${task_dir}/README.md" ]; then
+        ANNOTATIONS+=("org.opencontainers.image.documentation=${URL}/tree/${REVISION}/${CONTEXT}/README.md")
+      fi
+
+      if [ -f "${task_dir}/TROUBLESHOOTING.md" ]; then
+        ANNOTATIONS+=("dev.tekton.docs.troubleshooting=${URL}/tree/${REVISION}/${CONTEXT}/TROUBLESHOOTING.md")
+      fi
+
+      if [ -f "${task_dir}/USAGE.md" ]; then
+        ANNOTATIONS+=("dev.tekton.docs.usage=${URL}/tree/${REVISION}/${CONTEXT}/USAGE.md")
+      fi
+      description=$(yq '.spec.description' "${FILES[@]}" | sed '/null/d' | tr -d '')
+      ANNOTATIONS+=("org.opencontainers.image.description=${description}")
+
+      if [ "$has_migration" == "true" ]; then
+        ANNOTATIONS+=("${ANNOTATION_HAS_MIGRATION}=true")
+      fi
+
+      echo "Added annotations:"
+      ANNOTATION_FLAGS=()
+      for annotation in "${ANNOTATIONS[@]}"; do
+        ANNOTATION_FLAGS+=("--annotate" "$(escape_tkn_bundle_arg "$annotation")")
+        echo "    - $annotation"
+      done
+
+      echo "Pushing bundle ${IMAGE} to registry"
+      # shellcheck disable=SC2046
+      if ! OUT="$(retry tkn bundle push "${ANNOTATION_FLAGS[@]}" "$IMAGE" \
+        $(printf ' -f %s' "${FILES[@]}") |
+        tee /proc/self/fd/3)"; then
+        echo "Failed to push bundle ${IMAGE} to registry"
+        exit 1
+      fi
+
+      digest="${OUT#*Pushed Tekton Bundle to *@}"
+      IMAGE_REF="${IMAGE}@${digest}"
+
+      echo -n "$IMAGE" >"$(results.IMAGE_URL.path)"
+      echo -n "${digest}" >"$(results.IMAGE_DIGEST.path)"
+      echo -n "${IMAGE_REF}" >"$(results.IMAGE_REF.path)"
+
+      if [ "$has_migration" == "true" ]; then
+        migration_file="$(workspaces.source.path)/${SOURCE_CODE_DIR}/${migration_file}"
+        has_existing_migration_file=$(check_existing_migration_file "${IMAGE_REF}" "${task_version}" "${migration_file}")
+        if [[ -z ${has_existing_migration_file} ]]; then
+          echo "there is different migration script file in task bundle ${IMAGE_REF}, failed"
           exit 1
         fi
-        echo -n "$IMAGE" >"$(results.IMAGE_URL.path)"
-        digest="${OUT#*Pushed Tekton Bundle to *@}"
-        echo -n "${digest}" >"$(results.IMAGE_DIGEST.path)"
-        echo -n "${IMAGE}@${digest}" >"$(results.IMAGE_REF.path)"
 
-        # cleanup task file
-        [[ -f "${TASK_FILE}" ]] && rm -f "${TASK_FILE}"
+        if [[ ${has_existing_migration_file} -eq 1 ]]; then
+          echo "the same migration file exists in task bundle ${IMAGE_REF}, skipped"
+          exit 0
+        fi
+
+        echo "attach migration script to $IMAGE_REF"
+        select-oci-auth "${IMAGE_REF}" > "${HOME}/auth.json"
+        status=0
+        status=$(attach_migration_file "${IMAGE_REF}" "${task_version}" "${migration_file}" "${HOME}/auth.json")
+        if [ "$status" -ne 0 ]; then
+          exit 1
+        fi
+      fi
+
+      # cleanup task file
+      [[ -f "${TASK_FILE}" ]] && rm -f "${TASK_FILE}"
     securityContext:
       runAsUser: 0
     workingDir: $(workspaces.source.path)
