Remove show-sbom Task from the default pipelines
The Task can still be used if someone really wants to, but there's no
reason to force this Task on everyone. Because this Task dumps the full
SBOM into the logs, it has the odd side effect of also storing SBOMs in
log aggregators, like Splunk.

Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/pipelines/docker-build-rhtap/patch.yaml
+++ b/pipelines/docker-build-rhtap/patch.yaml
@@ -102,10 +102,7 @@
       value: "$(params.build-args-file)"
 # Change references from build-image-index to build-container
 - op: replace
-  path: /spec/finally/0/params/0/value  # show-sbom.params.IMAGE_URL
-  value: $(tasks.build-container.results.IMAGE_URL)
-- op: replace
-  path: /spec/finally/1/params/3/value  # show-summary.params.build-task-status
+  path: /spec/finally/0/params/3/value  # show-summary.params.build-task-status
   value: $(tasks.build-container.status)
 - op: replace
   path: /spec/results/0/value  # IMAGE_URL
@@ -246,8 +243,13 @@
     taskRef:
       kind: Task
       name: update-deployment
-- op: replace
-  path: /spec/finally/0/taskRef
+- op: add
+  path: /spec/finally/0
   value:
-    name: show-sbom-rhdh
-    version: "0.1"
+    name: show-sbom
+    taskRef:
+      name: show-sbom-rhdh
+      version: "0.1"
+    params:
+    - name: IMAGE_URL
+      value: $(tasks.build-container.results.IMAGE_URL)
