feat: add image substitution to build-helm-chart
The build-helm-chart task relied on the images in the chart to be
updated prior for the chart running, requiring that the update of
the image that the charts deploys and the chart itself are not changed
at part of the same commit.

This change introduces version 0.2 in which the image and chart are
expected to be built at the same time, for which the task for building
the chart needs to substitute the images within the chart with
values per what is being built at the same time.

Assisted by Cursor

Signed-off-by: Yftach Herzog <yherzog@redhat.com>

--- a/task/build-helm-chart/0.1/build-helm-chart.yaml
+++ b/task/build-helm-chart/0.1/build-helm-chart.yaml
@@ -3,6 +3,10 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: build-helm-chart
+  annotations:
+    build.appstudio.redhat.com/expires-on: "2025-07-28T00:00:00Z"
+    build.appstudio.redhat.com/expiry-message: 'This task is deprecated, please remove
+      it from your pipeline. You can use build-helm-chart-oci-ta task instead.'
   labels:
     app.kubernetes.io/version: "0.1"
 spec:
