--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -5,7 +5,7 @@ metadata:
   name: build-definitions-pull-request
   annotations:
     pipelinesascode.tekton.dev/on-cel-expression: (event == "pull_request" && target_branch == "main" && ( !has(body.pull_request) || !body.pull_request.draft) ) || (event == "push" && target_branch.startsWith("gh-readonly-queue/main/") && body.head_commit != "null" )
-    pipelinesascode.tekton.dev/task: "[task/git-clone/0.1/git-clone.yaml, .tekton/tasks/buildah.yaml, .tekton/tasks/task-lint.yaml, .tekton/tasks/e2e-test.yaml, task/sast-snyk-check/0.4/sast-snyk-check.yaml, task/sast-unicode-check/0.2/sast-unicode-check.yaml, .tekton/tasks/task-switchboard.yaml]"
+    pipelinesascode.tekton.dev/task: "[task/git-clone/0.1/git-clone.yaml, task/buildah-remote/0.4/buildah-remote.yaml, task/build-image-index/0.1/build-image-index.yaml, .tekton/tasks/task-lint.yaml, .tekton/tasks/e2e-test.yaml, task/sast-snyk-check/0.4/sast-snyk-check.yaml, task/sast-unicode-check/0.2/sast-unicode-check.yaml, .tekton/tasks/task-switchboard.yaml]"
     pipelinesascode.tekton.dev/max-keep-runs: "5"
 spec:
   params:
@@ -23,7 +23,7 @@ spec:
     workspaces:
       - name: workspace
     tasks:
-      - name: fetch-repository
+      - name: clone-repository
         taskRef:
           name: git-clone
         workspaces:
@@ -37,26 +37,48 @@ spec:
           - name: depth
             value: "0"
       - name: build-appstudio-utils
-        runAfter:
-          - fetch-repository
+        matrix:
+          params:
+          - name: PLATFORM
+            value:
+            - linux/x86_64
+            - linux/arm64
         params:
           - name: IMAGE
-            value: quay.io/konflux-ci/pull-request-builds:appstudio-utils-{{revision}}
+            value: quay.io/konflux-ci/appstudio-utils:{{ revision }}
           - name: CONTEXT
             value: appstudio-utils
+          - name: IMAGE_APPEND_PLATFORM
+            value: "true"
+        runAfter:
+          - clone-repository
         taskRef:
-          name: buildah
+          name: buildah-remote
         workspaces:
           - name: source
             workspace: workspace
+
+      - name: build-appstudio-utils-index
+        params:
+          - name: IMAGE
+            value: quay.io/konflux-ci/appstudio-utils:{{ revision }}
+          - name: IMAGES
+            value:
+            - $(tasks.build-appstudio-utils.results.IMAGE_REF[*])
+        runAfter:
+          - build-appstudio-utils
+        taskRef:
+          name: build-image-index
+
       - name: sast-snyk-check
         runAfter:
-          - fetch-repository
+          - clone-repository
+          - build-appstudio-utils-index
         params:
           - name: image-url
-            value: "$(tasks.build-appstudio-utils.results.IMAGE_URL)"
+            value: "$(tasks.build-appstudio-utils-index.results.IMAGE_URL)"
           - name: image-digest
-            value: "$(tasks.build-appstudio-utils.results.IMAGE_DIGEST)"
+            value: "$(tasks.build-appstudio-utils-index.results.IMAGE_DIGEST)"
         taskRef:
           name: sast-snyk-check
         workspaces:
@@ -76,7 +98,7 @@ spec:
               - tasks_pipelines := strings.any_prefix_match(input, ["task/", "pipelines/", "hack/", ".tekton/"])
               - check_partner_tasks := strings.any_prefix_match(input, ["partners/", "hack/", ".tekton/"])
         runAfter:
-          - build-appstudio-utils
+          - build-appstudio-utils-index
         workspaces:
           - name: source
             workspace: workspace
@@ -94,10 +116,10 @@ spec:
             workspace: workspace
       - name: sast-unicode-check
         runAfter:
-          - build-appstudio-utils
+          - build-appstudio-utils-index
         params:
           - name: image-digest
-            value: "$(tasks.build-appstudio-utils.results.IMAGE_DIGEST)"
+            value: "$(tasks.build-appstudio-utils-index.results.IMAGE_DIGEST)"
         taskRef:
           name: sast-unicode-check
         workspaces:
